feat: add metodos de recrutador e vaga na classe Fachada